# zzhack

./: .gitignore  AGENTS.md  App.toml  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml
.github/workflows/: deploy.yml
app/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
app/src/: app.rs  cache_service.rs  commands_history_service.rs  config_service.rs  highlight_engine.rs  highlight_service.rs  lib.rs  main.rs  markdown_renderer.rs  router.rs  terminal.rs  terminal_state.rs  types.rs  vfs.json  vfs_data.rs
app/src/commands/: boa.rs  cat.rs  cd.rs  clear.rs  du.rs  echo.rs  email.rs  eval.rs  fetch.rs  help.rs  history.rs  ls.rs  mod.rs  navigate.rs  pwd.rs  render.rs  sleep.rs  stat.rs  theme.rs  whoami.rs
app/src/components/: header_bar.rs  mod.rs  output_log.rs  post_item.rs  prompt_line.rs  shadow_scroll.rs  svg_icon.rs  terminal_window.rs  typewriter.rs
app/src/components/markdown_renderer/: avatar.rs  blockquote.rs  code_block.rs  header.rs  image.rs  inline_code.rs  link.rs  math_block.rs  math_inline.rs  mod.rs  ordered_list.rs  unordered_list.rs
app/src/styles/: global.css
app/src/utils/: formula.rs  mod.rs  path.rs  reading.rs  run_async.rs  time_format.rs
data/: .shrc  01_greeter.md  02_help.md  03_design.md  04_configuration.md  index.md
micro_cli/: Cargo.toml
micro_cli/examples/: shell_parser_runner.rs
micro_cli/examples/cli/: add_cli.rs  echo_cli.rs
micro_cli/src/: command.rs  error.rs  help.rs  lib.rs  macros.rs  parser.rs  tests.rs
micro_cli_derive/: Cargo.toml
micro_cli_derive/src/: lib.rs
shell_parser/: Cargo.toml  README.md
shell_parser/example_out/: piped.txt
shell_parser/examples/: alias.rs  basic.rs  builtin.rs  function.rs  pipe.rs
shell_parser/src/: command.rs  error.rs  integration.rs  lib.rs  parser.rs  separator.rs  tests.rs  tokenizer.rs
system_api/: Cargo.toml
system_api/src/: lib.rs  read.rs  stats.rs
vfs/: Cargo.toml
vfs/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
